# spacy-fastapi-ja

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  locustfile.py  pyproject.toml
app/: api.py  logger.py  models.py  spacy_extractor.py
app/data/: example_request.json
app/tests/: test_api.py
load_test/: README.md  get_memory.py
